--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,9 +1,9 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Cartograph CF Nerd Font, monospace;
+    font-family: JetBrains Mono Nerd Font, monospace;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 15px;
     min-height: 0;
 }
 
@@ -12,36 +12,29 @@ window#waybar {
     color: #cdd6f4;
 }
 
-tooltip {
-    background: #1e1e2e;
-    border-radius: 10px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: #11111b;
-}
+/* tooltip { */
+/*     background: #1e1e2e; */
+/*     border-radius: 10px; */
+/*     border-width: 2px; */
+/*     border-style: solid; */
+/*     border-color: #11111b; */
+/* } */
 
-#window,
-#privacy,
-#clock,
-#custom-cpu_temperature,
-#custom-gpu_temperature,
 #pulseaudio,
-#network,
-#language,
 #mpris,
 #workspaces,
 #tray {
     background: #1e1e2e;
     padding: 0px 10px;
-    margin: 3px 0px;
-    margin-top: 8px;
-    border: 1px solid #181825;
+    /* margin: 3px 0px; */
+    /* margin-top: 8px; */
+    /* border: 1px solid #181825; */
     color: #fab387;
 }
 
 #workspaces {
-    border-radius: 10px 10px 10px 10px;
-    margin-right: 6px;
+    border-radius: 10px 0px 0px 0px;
+    /* margin-right: 6px; */
 }
 
 #workspaces button {
@@ -64,45 +57,15 @@ tooltip {
 }
 
 #tray {
-    border-radius: 10px;
-    margin-right: 6px;
-}
-
-#window {
-    border-radius: 10px;
-    margin-left: 6px;
-    margin-right: 6px;
-}
-
-#clock {
-    border-radius: 10px;
-    /* margin-left: 3px; */
+    /* border-radius: 10px; */
+    /* margin-right: 6px; */
 }
 
 #mpris {
-    border-radius: 10px 10px 10px 10px;
-    margin-left: 6px;
-}
-
-#privacy {
-    margin-left: 6px;
-    border-radius: 10px;
-}
-
-#custom-cpu_temperature {
-    border-radius: 0px 10px 10px 0px;
-}
-
-#custom-gpu_temperature {
-    margin-left: 6px;
-    border-radius: 10px 0px 0px 10px;
-}
-
-#network {
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 5px;
+    border-radius: 0px 10px 0px 0px;
+    /* margin-left: 6px; */
 }
 
 #pulseaudio {
-    border-radius: 10px 0px 0px 10px;
+    /* border-radius: 10px 0px 0px 10px; */
 }
